[package]
name = "hacker_game"
version = "0.1.0"
edition = "2021"
description = "2D stealth/hacking/puzzle platformer set in a cyberpunk network"
authors = ["HackerOS Team <hackeros068@gmail.com>"]
license = "MIT"

[dependencies]
bevy = { version = "0.14.0", features = ["dynamic_linking", "wgsl"] } # Dodano wgsl dla shaderów
bevy_egui = "0.25.0" # UI dla skill tree i mini-gier
bevy_rapier2d = { version = "0.26.0", features = ["debug-render"] } # Fizyka 2D i raycasting
noise = "0.9.0" # Generacja losowych poziomów
rand = "0.8.5" # Losowość
bevy_sprite_animation = "0.3.0" # Animacje sprite'ów
bevy_kira_audio = "0.20.0" # Dźwięk
ratatui = "0.27.2" # Terminal HackerOS
crossterm = "0.28.1" # Obsługa terminala
serde = { version = "1.0.210", features = ["derive"] } # Serializacja
serde_json = "1.0.128" # JSON dla configów
bevy_asset_loader = "0.21.0" # Łatwe ładowanie assetów

[dev-dependencies]
criterion = "0.5.1" # Benchmarking

[profile.dev]
opt-level = 1

[profile.release]
opt-level = 3
lto = "thin"
